Include author name in post index, fix profile width, remove container scrollbar

--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -119,50 +119,25 @@ textarea {
   position: absolute;
 }
 
-// .post-photo-0{
+// .post-photo-1{
 //   width: 300px;
 //   height: 300px;
-//   // background-image: url('.././images/seed1.png');
-//   background-color: grey;
+//   background-image: url('../../images/mala.png');
+//   // background-color: red;
 //   margin-bottom: 20px;
 // }
 
-.post-photo-1{
-  width: 300px;
-  height: 300px;
-  background-image: url('../../images/mala.png');
-  // background-color: red;
-  margin-bottom: 20px;
-}
-
-.post-photo-2{
-  width: 300px;
-  height: 266px;
-  background-image: url('../../images/ayada.png');
-  // background-color: red;
-  margin-bottom: 20px;
-}
-
-.post-photo-3{
-  width: 300px;
-  height: 300px;
-  background-image: url('../../images/corn.png');
-  // background-color: red;
-  margin-bottom: 20px;
-}
-
-// .post-photo-4{
+// .post-photo-2{
 //   width: 300px;
-//   height: 300px;
-//   // background-image: url('.././images/seed1.png');
-//   background-color: red;
+//   height: 266px;
+//   background-image: url('../../images/ayada.png');
+//   // background-color: red;
 //   margin-bottom: 20px;
 // }
 
-// .post-photo-5{
+// .post-photo-3{
 //   width: 300px;
 //   height: 300px;
-//   // background-image: url('.././images/seed1.png');
-//   background-color: red;
+//   background-image: url('../../images/corn.png');
 //   margin-bottom: 20px;
 // }
